# templ-trunk-seed

./: Cargo.toml
src/: main.rs
